Add update and remove user endpoints.
