# api/api.pb.go
@@ -20,6 +20,10 @@ It has these top-level messages:
 	ReorderResponse
 	GetUsersRequest
 	GetUsersResponse
+	UpdateUserRequest
+	UpdateUserResponse
+	RemoveUserRequest
+	RemoveUserResponse
 */
 package api
 
@@ -325,6 +329,70 @@ func (m *GetUsersResponse) GetUser() []*User {
 	return nil
 }
 
+type UpdateUserRequest struct {
+	UserId       string `protobuf:"bytes,1,opt,name=userId" json:"userId,omitempty"`
+	Name         string `protobuf:"bytes,2,opt,name=name" json:"name,omitempty"`
+	NextTalkName string `protobuf:"bytes,3,opt,name=nextTalkName" json:"nextTalkName,omitempty"`
+}
+
+func (m *UpdateUserRequest) Reset()                    { *m = UpdateUserRequest{} }
+func (m *UpdateUserRequest) String() string            { return proto.CompactTextString(m) }
+func (*UpdateUserRequest) ProtoMessage()               {}
+func (*UpdateUserRequest) Descriptor() ([]byte, []int) { return fileDescriptor0, []int{12} }
+
+func (m *UpdateUserRequest) GetUserId() string {
+	if m != nil {
+		return m.UserId
+	}
+	return ""
+}
+
+func (m *UpdateUserRequest) GetName() string {
+	if m != nil {
+		return m.Name
+	}
+	return ""
+}
+
+func (m *UpdateUserRequest) GetNextTalkName() string {
+	if m != nil {
+		return m.NextTalkName
+	}
+	return ""
+}
+
+type UpdateUserResponse struct {
+}
+
+func (m *UpdateUserResponse) Reset()                    { *m = UpdateUserResponse{} }
+func (m *UpdateUserResponse) String() string            { return proto.CompactTextString(m) }
+func (*UpdateUserResponse) ProtoMessage()               {}
+func (*UpdateUserResponse) Descriptor() ([]byte, []int) { return fileDescriptor0, []int{13} }
+
+type RemoveUserRequest struct {
+	UserId string `protobuf:"bytes,1,opt,name=userId" json:"userId,omitempty"`
+}
+
+func (m *RemoveUserRequest) Reset()                    { *m = RemoveUserRequest{} }
+func (m *RemoveUserRequest) String() string            { return proto.CompactTextString(m) }
+func (*RemoveUserRequest) ProtoMessage()               {}
+func (*RemoveUserRequest) Descriptor() ([]byte, []int) { return fileDescriptor0, []int{14} }
+
+func (m *RemoveUserRequest) GetUserId() string {
+	if m != nil {
+		return m.UserId
+	}
+	return ""
+}
+
+type RemoveUserResponse struct {
+}
+
+func (m *RemoveUserResponse) Reset()                    { *m = RemoveUserResponse{} }
+func (m *RemoveUserResponse) String() string            { return proto.CompactTextString(m) }
+func (*RemoveUserResponse) ProtoMessage()               {}
+func (*RemoveUserResponse) Descriptor() ([]byte, []int) { return fileDescriptor0, []int{15} }
+
 func init() {
 	proto.RegisterType((*User)(nil), "api.User")
 	proto.RegisterType((*Talk)(nil), "api.Talk")
@@ -338,6 +406,10 @@ func init() {
 	proto.RegisterType((*ReorderResponse)(nil), "api.ReorderResponse")
 	proto.RegisterType((*GetUsersRequest)(nil), "api.GetUsersRequest")
 	proto.RegisterType((*GetUsersResponse)(nil), "api.GetUsersResponse")
+	proto.RegisterType((*UpdateUserRequest)(nil), "api.UpdateUserRequest")
+	proto.RegisterType((*UpdateUserResponse)(nil), "api.UpdateUserResponse")
+	proto.RegisterType((*RemoveUserRequest)(nil), "api.RemoveUserRequest")
+	proto.RegisterType((*RemoveUserResponse)(nil), "api.RemoveUserResponse")
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
@@ -354,6 +426,8 @@ type ApiServiceClient interface {
 	FetchAll(ctx context.Context, in *FetchAllRequest, opts ...grpc.CallOption) (*FetchAllResponse, error)
 	GetUsers(ctx context.Context, in *GetUsersRequest, opts ...grpc.CallOption) (*GetUsersResponse, error)
 	AddUser(ctx context.Context, in *AddUserRequest, opts ...grpc.CallOption) (*AddUserResponse, error)
+	UpdateUser(ctx context.Context, in *UpdateUserRequest, opts ...grpc.CallOption) (*UpdateUserResponse, error)
+	RemoveUser(ctx context.Context, in *RemoveUserRequest, opts ...grpc.CallOption) (*RemoveUserResponse, error)
 	// Change the position of one user in the list of upcoming talks.
 	Reorder(ctx context.Context, in *ReorderRequest, opts ...grpc.CallOption) (*ReorderResponse, error)
 	AddTalk(ctx context.Context, in *AddTalkRequest, opts ...grpc.CallOption) (*AddTalkResponse, error)
@@ -394,6 +468,24 @@ func (c *apiServiceClient) AddUser(ctx context.Context, in *AddUserRequest, opts
 	return out, nil
 }
 
+func (c *apiServiceClient) UpdateUser(ctx context.Context, in *UpdateUserRequest, opts ...grpc.CallOption) (*UpdateUserResponse, error) {
+	out := new(UpdateUserResponse)
+	err := grpc.Invoke(ctx, "/api.ApiService/UpdateUser", in, out, c.cc, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *apiServiceClient) RemoveUser(ctx context.Context, in *RemoveUserRequest, opts ...grpc.CallOption) (*RemoveUserResponse, error) {
+	out := new(RemoveUserResponse)
+	err := grpc.Invoke(ctx, "/api.ApiService/RemoveUser", in, out, c.cc, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 func (c *apiServiceClient) Reorder(ctx context.Context, in *ReorderRequest, opts ...grpc.CallOption) (*ReorderResponse, error) {
 	out := new(ReorderResponse)
 	err := grpc.Invoke(ctx, "/api.ApiService/Reorder", in, out, c.cc, opts...)
@@ -418,6 +510,8 @@ type ApiServiceServer interface {
 	FetchAll(context.Context, *FetchAllRequest) (*FetchAllResponse, error)
 	GetUsers(context.Context, *GetUsersRequest) (*GetUsersResponse, error)
 	AddUser(context.Context, *AddUserRequest) (*AddUserResponse, error)
+	UpdateUser(context.Context, *UpdateUserRequest) (*UpdateUserResponse, error)
+	RemoveUser(context.Context, *RemoveUserRequest) (*RemoveUserResponse, error)
 	// Change the position of one user in the list of upcoming talks.
 	Reorder(context.Context, *ReorderRequest) (*ReorderResponse, error)
 	AddTalk(context.Context, *AddTalkRequest) (*AddTalkResponse, error)
@@ -481,6 +575,42 @@ func _ApiService_AddUser_Handler(srv interface{}, ctx context.Context, dec func(
 	return interceptor(ctx, in, info, handler)
 }
 
+func _ApiService_UpdateUser_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(UpdateUserRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ApiServiceServer).UpdateUser(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/api.ApiService/UpdateUser",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ApiServiceServer).UpdateUser(ctx, req.(*UpdateUserRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _ApiService_RemoveUser_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(RemoveUserRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ApiServiceServer).RemoveUser(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/api.ApiService/RemoveUser",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ApiServiceServer).RemoveUser(ctx, req.(*RemoveUserRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 func _ApiService_Reorder_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
 	in := new(ReorderRequest)
 	if err := dec(in); err != nil {
@@ -534,6 +664,14 @@ var _ApiService_serviceDesc = grpc.ServiceDesc{
 			Handler:    _ApiService_AddUser_Handler,
 		},
 		{
+			MethodName: "UpdateUser",
+			Handler:    _ApiService_UpdateUser_Handler,
+		},
+		{
+			MethodName: "RemoveUser",
+			Handler:    _ApiService_RemoveUser_Handler,
+		},
+		{
 			MethodName: "Reorder",
 			Handler:    _ApiService_Reorder_Handler,
 		},
@@ -549,40 +687,47 @@ var _ApiService_serviceDesc = grpc.ServiceDesc{
 func init() { proto.RegisterFile("api.proto", fileDescriptor0) }
 
 var fileDescriptor0 = []byte{
-	// 550 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x8c, 0x54, 0xcd, 0x6e, 0xd3, 0x40,
-	0x10, 0x96, 0xed, 0xd0, 0x38, 0x53, 0x9a, 0x84, 0xed, 0x8f, 0x2c, 0xab, 0xa0, 0x68, 0xc5, 0xc1,
-	0xaa, 0x44, 0x03, 0xe5, 0xd6, 0x5b, 0x2e, 0xad, 0x22, 0x10, 0x07, 0x43, 0x1f, 0x60, 0x6b, 0x4f,
-	0x5b, 0x53, 0x77, 0xd7, 0xac, 0x9d, 0x88, 0x33, 0x07, 0x2e, 0x1c, 0x79, 0x34, 0x5e, 0x81, 0x07,
-	0x41, 0xfb, 0xe3, 0x5f, 0x7a, 0xe8, 0x29, 0x3b, 0xdf, 0x4c, 0xbe, 0xf9, 0x66, 0xe6, 0x93, 0x61,
-	0xc2, 0x8a, 0xec, 0xb4, 0x90, 0xa2, 0x12, 0xc4, 0x63, 0x45, 0x16, 0x1e, 0xdf, 0x0a, 0x71, 0x9b,
-	0xe3, 0x92, 0x15, 0xd9, 0x92, 0x71, 0x2e, 0x2a, 0x56, 0x65, 0x82, 0x97, 0xa6, 0x84, 0x5e, 0xc0,
-	0xe8, 0xaa, 0x44, 0x49, 0xa6, 0xe0, 0x66, 0x69, 0xe0, 0x2c, 0x9c, 0x68, 0x12, 0xbb, 0x59, 0x4a,
-	0x08, 0x8c, 0x38, 0x7b, 0xc0, 0xc0, 0xd5, 0x88, 0x7e, 0x93, 0x10, 0x7c, 0x8e, 0xdf, 0xab, 0x2f,
-	0x2c, 0xbf, 0x0f, 0x3c, 0x8d, 0x37, 0x31, 0xe5, 0x30, 0x52, 0xbf, 0x4f, 0xe2, 0x39, 0x86, 0x49,
-	0x59, 0x20, 0xbb, 0x47, 0xb9, 0x4e, 0x2d, 0x51, 0x0b, 0xa8, 0x7f, 0xa4, 0x82, 0x63, 0x30, 0x5a,
-	0x38, 0x91, 0x1f, 0xeb, 0x37, 0x99, 0x83, 0xb7, 0x91, 0x79, 0xf0, 0x6c, 0xe1, 0x45, 0x93, 0x58,
-	0x3d, 0xe9, 0x0b, 0x98, 0x5d, 0x60, 0x95, 0xdc, 0xad, 0xf2, 0x3c, 0xc6, 0x6f, 0x1b, 0x2c, 0x2b,
-	0xfa, 0x15, 0xe6, 0x2d, 0x54, 0x16, 0x82, 0x97, 0x48, 0x02, 0x18, 0x6f, 0x51, 0x96, 0x99, 0xe0,
-	0x56, 0x53, 0x1d, 0x92, 0x97, 0x30, 0xda, 0x94, 0x28, 0x03, 0x77, 0xe1, 0x45, 0xbb, 0x67, 0x93,
-	0x53, 0xb5, 0x35, 0xb5, 0x89, 0x58, 0xc3, 0x2a, 0x5d, 0x99, 0x39, 0xdb, 0xb4, 0x1a, 0x30, 0xd6,
-	0x30, 0x7d, 0x0d, 0xd3, 0x55, 0x9a, 0xea, 0x7a, 0xd3, 0xbd, 0x19, 0xd4, 0x69, 0x07, 0xa5, 0x6f,
-	0x61, 0xd6, 0x54, 0x59, 0x41, 0x75, 0x5b, 0x55, 0xf6, 0x7f, 0x5b, 0x1a, 0x69, 0x5e, 0xdd, 0xc8,
-	0xf2, 0x1e, 0xc1, 0x8e, 0xca, 0xac, 0xeb, 0xa5, 0xda, 0xc8, 0x72, 0x9b, 0xca, 0x96, 0x5b, 0x6b,
-	0xee, 0x72, 0x77, 0x34, 0xff, 0x74, 0x60, 0x1a, 0xa3, 0x90, 0x69, 0x2b, 0x7a, 0xb0, 0x1e, 0xaf,
-	0x5d, 0xcf, 0x2b, 0x80, 0x07, 0xb1, 0xc5, 0x2b, 0xd3, 0xda, 0x5c, 0xaf, 0x83, 0x10, 0x0a, 0xcf,
-	0x19, 0x4f, 0xee, 0x84, 0xb4, 0x15, 0xe6, 0x8c, 0x3d, 0x4c, 0x49, 0xbf, 0xc6, 0x1b, 0x21, 0xeb,
-	0x5b, 0xda, 0x88, 0x5e, 0xc2, 0xac, 0xd1, 0x61, 0xa5, 0x87, 0xe0, 0xb3, 0x24, 0xc1, 0xa2, 0x42,
-	0x33, 0xa7, 0x1f, 0x37, 0x71, 0x57, 0xa4, 0xdb, 0xbb, 0xa1, 0x32, 0xc1, 0x25, 0x56, 0xaa, 0x5b,
-	0x59, 0x9b, 0xe0, 0x03, 0xcc, 0x5b, 0xe8, 0x71, 0x13, 0x78, 0x4f, 0x35, 0xc1, 0xd9, 0x2f, 0x0f,
-	0x60, 0x55, 0x64, 0x9f, 0x51, 0x6e, 0xb3, 0x04, 0xc9, 0x27, 0xf0, 0x6b, 0x83, 0x91, 0x03, 0x5d,
-	0x3b, 0xb0, 0x60, 0x78, 0x38, 0x40, 0x8d, 0x00, 0x7a, 0xf8, 0xe3, 0xcf, 0xdf, 0xdf, 0xee, 0x8c,
-	0xec, 0x2d, 0xb7, 0xef, 0x96, 0x37, 0x2a, 0xfb, 0x86, 0xe5, 0x39, 0x59, 0x83, 0x5f, 0x6b, 0xb5,
-	0x7c, 0x83, 0x69, 0x2c, 0xdf, 0x70, 0x20, 0x3a, 0xd7, 0x7c, 0x40, 0x7c, 0xc5, 0xa7, 0xed, 0xba,
-	0x86, 0xb1, 0x75, 0x1a, 0xd9, 0xd7, 0xff, 0xe9, 0xbb, 0x33, 0x3c, 0xe8, 0x83, 0x96, 0x67, 0x5f,
-	0xf3, 0xec, 0xd1, 0x86, 0xe7, 0xdc, 0x39, 0x21, 0x1f, 0x61, 0x6c, 0xaf, 0x63, 0xa9, 0xfa, 0x9e,
-	0xb1, 0x54, 0x83, 0x03, 0xd2, 0x23, 0x4d, 0x35, 0xa7, 0xbb, 0x8a, 0x4a, 0x9a, 0xa4, 0x62, 0x33,
-	0xc2, 0xf4, 0xa7, 0xa1, 0x11, 0xd6, 0xb1, 0x77, 0x2b, 0xac, 0xeb, 0xe4, 0xbe, 0x30, 0x65, 0xde,
-	0x73, 0xe7, 0xe4, 0x7a, 0x47, 0x7f, 0xb1, 0xde, 0xff, 0x0b, 0x00, 0x00, 0xff, 0xff, 0x39, 0x22,
-	0x8c, 0xf9, 0xe1, 0x04, 0x00, 0x00,
+	// 658 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x8c, 0x95, 0xcb, 0x6e, 0xd3, 0x40,
+	0x14, 0x86, 0xe5, 0x0b, 0x8d, 0x73, 0xda, 0xe6, 0x32, 0x49, 0x83, 0xb1, 0x02, 0x8a, 0x46, 0x2c,
+	0xa2, 0x20, 0x1a, 0x08, 0xbb, 0xee, 0xb2, 0x69, 0x15, 0x81, 0xba, 0x30, 0x44, 0x42, 0x62, 0x35,
+	0xb5, 0xa7, 0xad, 0xa9, 0xeb, 0x31, 0xb6, 0x13, 0x21, 0x21, 0x36, 0x2c, 0x78, 0x01, 0xde, 0x88,
+	0x57, 0xe0, 0x15, 0x78, 0x10, 0x34, 0x17, 0x5f, 0x53, 0xd4, 0xae, 0xea, 0xf9, 0xe7, 0xe4, 0x3b,
+	0x67, 0xfe, 0x33, 0x67, 0x0a, 0x6d, 0x12, 0x07, 0xc7, 0x71, 0xc2, 0x32, 0x86, 0x0c, 0x12, 0x07,
+	0xce, 0xf8, 0x8a, 0xb1, 0xab, 0x90, 0xce, 0x49, 0x1c, 0xcc, 0x49, 0x14, 0xb1, 0x8c, 0x64, 0x01,
+	0x8b, 0x52, 0x19, 0x82, 0x4f, 0xc1, 0x5c, 0xa7, 0x34, 0x41, 0x1d, 0xd0, 0x03, 0xdf, 0xd6, 0x26,
+	0xda, 0xb4, 0xed, 0xea, 0x81, 0x8f, 0x10, 0x98, 0x11, 0xb9, 0xa5, 0xb6, 0x2e, 0x14, 0xf1, 0x8d,
+	0x1c, 0xb0, 0x22, 0xfa, 0x35, 0xfb, 0x40, 0xc2, 0x1b, 0xdb, 0x10, 0x7a, 0xb1, 0xc6, 0x11, 0x98,
+	0xfc, 0xef, 0x83, 0x38, 0x63, 0x68, 0xa7, 0x31, 0x25, 0x37, 0x34, 0x59, 0xf9, 0x0a, 0x54, 0x0a,
+	0xfc, 0x17, 0x3e, 0x8b, 0xa8, 0x6d, 0x4e, 0xb4, 0xa9, 0xe5, 0x8a, 0x6f, 0xd4, 0x03, 0x63, 0x93,
+	0x84, 0xf6, 0xa3, 0x89, 0x31, 0x6d, 0xbb, 0xfc, 0x13, 0xf7, 0xa1, 0x7b, 0x4a, 0x33, 0xef, 0x7a,
+	0x19, 0x86, 0x2e, 0xfd, 0xb2, 0xa1, 0x69, 0x86, 0x3f, 0x43, 0xaf, 0x94, 0xd2, 0x98, 0x45, 0x29,
+	0x45, 0x36, 0xb4, 0xb6, 0x34, 0x49, 0x03, 0x16, 0xa9, 0x9a, 0xf2, 0x25, 0x7a, 0x0a, 0xe6, 0x26,
+	0xa5, 0x89, 0xad, 0x4f, 0x8c, 0xe9, 0xfe, 0xa2, 0x7d, 0xcc, 0x5d, 0xe3, 0x4e, 0xb8, 0x42, 0xe6,
+	0xdb, 0x99, 0x3c, 0x67, 0xb9, 0xcd, 0x0f, 0xe8, 0x0a, 0x19, 0x3f, 0x87, 0xce, 0xd2, 0xf7, 0x45,
+	0xbc, 0xcc, 0x5e, 0x1c, 0x54, 0x2b, 0x0f, 0x8a, 0x5f, 0x41, 0xb7, 0x88, 0x52, 0x05, 0xe5, 0x69,
+	0x79, 0xd8, 0x6e, 0x5a, 0x3c, 0x15, 0x5c, 0x91, 0x48, 0x71, 0x47, 0xb0, 0xc7, 0x77, 0x56, 0xb9,
+	0xa9, 0x6a, 0xa5, 0xd8, 0x32, 0xb2, 0x64, 0x8b, 0x9a, 0xab, 0xec, 0x4a, 0xcd, 0x3f, 0x35, 0xe8,
+	0xb8, 0x94, 0x25, 0x7e, 0x59, 0x74, 0xc3, 0x1e, 0xa3, 0xb4, 0xe7, 0x19, 0xc0, 0x2d, 0xdb, 0xd2,
+	0xb5, 0x4c, 0x2d, 0xbb, 0x57, 0x51, 0x10, 0x86, 0x03, 0x12, 0x79, 0xd7, 0x2c, 0x51, 0x11, 0xb2,
+	0x8d, 0x35, 0x8d, 0x97, 0x7e, 0x41, 0x2f, 0x59, 0x92, 0xf7, 0x52, 0xad, 0xf0, 0x19, 0x74, 0x8b,
+	0x3a, 0x54, 0xe9, 0x0e, 0x58, 0xc4, 0xf3, 0x68, 0x9c, 0x51, 0x79, 0x4e, 0xcb, 0x2d, 0xd6, 0xd5,
+	0x22, 0xf5, 0x5a, 0x0f, 0xf9, 0x25, 0x38, 0xa3, 0x19, 0xcf, 0x96, 0xe6, 0x97, 0xe0, 0x2d, 0xf4,
+	0x4a, 0xe9, 0xee, 0x4b, 0x60, 0x3c, 0xf4, 0x12, 0x60, 0x0f, 0xfa, 0xeb, 0xd8, 0x27, 0x19, 0xad,
+	0x36, 0xfa, 0x3f, 0x0d, 0xb9, 0xf3, 0xa6, 0x63, 0x38, 0xc8, 0x27, 0xe4, 0x9c, 0xef, 0x29, 0x97,
+	0xaa, 0x1a, 0x1e, 0x02, 0xaa, 0x26, 0x91, 0x35, 0xe3, 0x17, 0xd0, 0x77, 0x69, 0xee, 0xf7, 0x7d,
+	0x77, 0x61, 0x08, 0xa8, 0x1a, 0x2c, 0x11, 0x8b, 0xdf, 0x26, 0xc0, 0x32, 0x0e, 0xde, 0xd3, 0x64,
+	0x1b, 0x78, 0x14, 0x9d, 0x83, 0x95, 0x8f, 0x07, 0x1a, 0x8a, 0x93, 0x36, 0x06, 0xc8, 0x39, 0x6a,
+	0xa8, 0xaa, 0x94, 0xa3, 0x1f, 0x7f, 0xfe, 0xfe, 0xd2, 0xbb, 0xe8, 0x70, 0xbe, 0x7d, 0x3d, 0xbf,
+	0xe4, 0xbb, 0x2f, 0x49, 0x18, 0xa2, 0x15, 0x58, 0xb9, 0xd3, 0x8a, 0xd7, 0xe8, 0x85, 0xe2, 0x35,
+	0xdb, 0x81, 0x7b, 0x82, 0x07, 0xc8, 0xe2, 0x3c, 0x31, 0x6c, 0x2b, 0x68, 0xa9, 0x39, 0x41, 0x03,
+	0xf1, 0x9b, 0xfa, 0x6c, 0x39, 0xc3, 0xba, 0xa8, 0x38, 0x03, 0xc1, 0x39, 0xc4, 0x05, 0xe7, 0x44,
+	0x9b, 0xa1, 0x4f, 0x00, 0xa5, 0x9b, 0x68, 0x24, 0x3b, 0xda, 0xec, 0xa1, 0xf3, 0x78, 0x47, 0x57,
+	0xcc, 0xb1, 0x60, 0x8e, 0x16, 0xfd, 0x9c, 0x39, 0xff, 0x26, 0x3d, 0xfe, 0xce, 0xe1, 0x1f, 0x01,
+	0x4a, 0x9f, 0x15, 0x7c, 0xa7, 0x4b, 0x0a, 0xbe, 0xdb, 0x10, 0xfc, 0x44, 0xc0, 0x07, 0xb3, 0x5d,
+	0x38, 0x7a, 0x07, 0x2d, 0x35, 0x12, 0xca, 0x81, 0xfa, 0xa0, 0x2a, 0x07, 0x1a, 0x53, 0x83, 0x47,
+	0x02, 0xd8, 0xc3, 0xfb, 0x1c, 0x98, 0xc8, 0x4d, 0x5e, 0xa7, 0xf4, 0x53, 0xbc, 0xc7, 0x85, 0x9f,
+	0x95, 0x37, 0xa5, 0xf4, 0xb3, 0xfa, 0x7c, 0xd4, 0xfd, 0xe4, 0x2f, 0xc6, 0x89, 0x36, 0xbb, 0xd8,
+	0x13, 0xff, 0x26, 0xde, 0xfc, 0x0b, 0x00, 0x00, 0xff, 0xff, 0x6f, 0x57, 0x59, 0x1a, 0x56, 0x06,
+	0x00, 0x00,
 }
